# compat

./: .gitignore  README.md  io.github._6e6b.compat.json  meson.build
.github/: pull_request_template.md
.github/workflows/: ci.yml  flatpak.yml
data/: io.github._6e6b.compat.desktop.in  io.github._6e6b.compat.gschema.xml  io.github._6e6b.compat.metainfo.xml.in  io.github._6e6b.compat.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: compat.gresource.xml  compat.in  main.py  meson.build  shortcuts-dialog.ui  style.css  window.ui
src/core/: constants.py  formatters.py  models.py  settings.py
src/services/: image_loader.py  steam_service.py
src/ui/: game_card.py  game_details_dialog.py  window.py
tests/: meson.build  test_formatters.py  test_settings.py
